--- a/index.html
+++ b/index.html
@@ -15,44 +15,44 @@
         <div id="search">
             <form>
                 <input type="text" placeholder="search">
-                <button>Search</button>
+                <button onclick="alert('There are only six products, what are you searching?')">Search</button>
             </form>
         </div>
     </header>
     
     <div id="candles">
         <article id="can1" class="can">
-            <a>
+            <a href="can1.html">
             <img src="https://image.shutterstock.com/image-photo/spa-setting-candle-salt-dried-600w-228917233.jpg">
             <p>Eggplant Candle</p>
             </a>
         </article>
         <article id="can2" class="can">
-            <a>
+            <a href="can2.html">
             <img src="https://image.shutterstock.com/image-photo/burning-candles-green-branches-on-600w-1474749818.jpg">
             <p>Coffee Candle</p>
             </a>
         </article>
         <article id="can3" class="can">
-            <a>
+            <a href="can3.html">
             <img src="https://image.shutterstock.com/image-photo/closeup-candles-flowers-600w-126011300.jpg">
             <p>Egg Candle</p>
             </a>
         </article>
         <article id="can4" class="can">
-            <a>
+            <a href="can4.html">
             <img src="https://image.shutterstock.com/image-photo/natural-eco-home-decor-succulent-600w-1784658428.jpg">
             <p>Aloe Candle</p>
             </a>
         </article>
         <article id="can5" class="can">
-            <a>
+            <a href="can5.html">
             <img src="https://image.shutterstock.com/image-photo/assortment-decorative-scented-candles-shot-600w-204112177.jpg">
             <p>Mango Candle</p>
             </a>
         </article>
         <article id="can6" class="can">
-            <a>
+            <a href="can6.html">
             <img src="https://image.shutterstock.com/image-photo/aroma-candles-pebbles-flower-isolated-600w-339651803.jpg">
             <p>Rock Candle</p>
             </a>
