--- a/index.html
+++ b/index.html
@@ -24,41 +24,42 @@
         <article id="can1" class="can">
             <a href="can1.html">
             <img src="https://image.shutterstock.com/image-photo/spa-setting-candle-salt-dried-600w-228917233.jpg">
-            <p>Eggplant Candle</p>
+            <p style="text-align: center;">Eggplant Candle</p>
             </a>
         </article>
         <article id="can2" class="can">
             <a href="can2.html">
             <img src="https://image.shutterstock.com/image-photo/burning-candles-green-branches-on-600w-1474749818.jpg">
-            <p>Coffee Candle</p>
+            <p style="text-align: center;">Coffee Candle</p>
             </a>
         </article>
         <article id="can3" class="can">
             <a href="can3.html">
             <img src="https://image.shutterstock.com/image-photo/closeup-candles-flowers-600w-126011300.jpg">
-            <p>Egg Candle</p>
+            <p style="text-align: center;">Egg Candle</p>
             </a>
         </article>
         <article id="can4" class="can">
             <a href="can4.html">
             <img src="https://image.shutterstock.com/image-photo/natural-eco-home-decor-succulent-600w-1784658428.jpg">
-            <p>Aloe Candle</p>
+            <p style="text-align: center;">Aloe Candle</p>
             </a>
         </article>
         <article id="can5" class="can">
             <a href="can5.html">
             <img src="https://image.shutterstock.com/image-photo/assortment-decorative-scented-candles-shot-600w-204112177.jpg">
-            <p>Mango Candle</p>
+            <p style="text-align: center;">Mango Candle</p>
             </a>
         </article>
         <article id="can6" class="can">
             <a href="can6.html">
             <img src="https://image.shutterstock.com/image-photo/aroma-candles-pebbles-flower-isolated-600w-339651803.jpg">
-            <p>Rock Candle</p>
+            <p style="text-align: center;">Rock Candle</p>
             </a>
         </article>
-        
     </div>
+    <br>
+    <br>
 </body>
 <footer>
     <p>© Candle-lite</p>
