--- a/can3.html
+++ b/can3.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header style="background-color: #816f6f;    ">
+        <button style="float: left; width: 50px; height: 50px;" onclick="location.href='https://seen3.github.io/Scented_Candles_WebSprint/'"><-</button>
         <h1 style="color: rgb(128, 90, 15);">Egg Candle</h1>
     </header>
     <article class="item">
