--- a/can4.html
+++ b/can4.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header style="background-color: #70f16b;    ">
+        <button style="float: left; width: 50px; height: 50px;" onclick="location.href='https://seen3.github.io/Scented_Candles_WebSprint/'"><-</button>
         <h1 style="color: rgb(5, 66, 2);">Aloe Vera Candle</h1>
     </header>
     <article class="item">
