--- a/can5.html
+++ b/can5.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header style="background-color: #b8da23;    ">
+        <button style="float: left; width: 50px; height: 50px;" onclick="location.href='https://seen3.github.io/Scented_Candles_WebSprint/'"><-</button>
         <h1 style="color: rgb(223, 103, 67);">Mango Candle</h1>
     </header>
     <article class="item">
